--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                         <img src="img/user-1.jpg" alt="User 1" class="chat-dropdown__user-image">
                                         <div class="chat-dropdown__text-container">
                                             <span class="chat-dropdown__user-name">Ryan Parsons</span>                                   
-                                            <span class="chat-dropdown__user-message">Supppp</span>
+                                            <span class="chat-dropdown__user-message">Can we push our reservation til 3</span>
                                         </div>
                                         <span class="chat-dropdown__time">7:52PM</span> 
                                     </a>
@@ -207,7 +207,7 @@
                                         <img src="img/user-2.jpg" alt="User 1" class="chat-dropdown__user-image">
                                         <div class="chat-dropdown__text-container">
                                             <span class="chat-dropdown__user-name">Amy Cowan</span>                                   
-                                            <span class="chat-dropdown__user-message">Last night was fun</span>
+                                            <span class="chat-dropdown__user-message">Ocho Rios looks great</span>
                                         </div>
                                         <span class="chat-dropdown__time">10:29AM</span> 
                                     </a>
@@ -218,7 +218,7 @@
                                         <img src="img/user-3.jpg" alt="User 1" class="chat-dropdown__user-image">
                                         <div class="chat-dropdown__text-container">
                                             <span class="chat-dropdown__user-name">Ryan Parsons</span>                                   
-                                            <span class="chat-dropdown__user-message">Supppp</span>
+                                            <span class="chat-dropdown__user-message">Looks great!</span>
                                         </div>
                                         <span class="chat-dropdown__time">1:23PM</span> 
                                     </a>
@@ -229,7 +229,7 @@
                                         <img src="img/user-4.jpg" alt="User 1" class="chat-dropdown__user-image">
                                         <div class="chat-dropdown__text-container">
                                             <span class="chat-dropdown__user-name">Samuel Clive</span>                                   
-                                            <span class="chat-dropdown__user-message">Hey dude where's my money</span>
+                                            <span class="chat-dropdown__user-message">There's a new hotel for you to see</span>
                                         </div>
                                         <span class="chat-dropdown__time">4:01PM</span> 
                                     </a>
