--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                         <img src="img/user-1.jpg" alt="User 1" class="chat-dropdown__user-image">
                                         <div class="chat-dropdown__text-container">
                                             <span class="chat-dropdown__user-name">Ryan Parsons</span>                                   
-                                            <span class="chat-dropdown__user-message">Can we push our reservation til 3</span>
+                                            <span class="chat-dropdown__user-message">Can we push our reservation til 3 pm</span>
                                         </div>
                                         <span class="chat-dropdown__time">7:52PM</span> 
                                     </a>
